Add Sockets dependency

--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,6 @@ name = "OptiTrack"
 uuid = "11cff889-9748-4ba6-b915-072355c0b56c"
 authors = ["Maximilian Schmidt <maximilian@schmidt.so>"]
 version = "0.1.0"
+
+[deps]
+Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
